config: conexão com banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb+srv://<username>:<password>@<bancodedados>.f8pdbuz.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=<bancodedados>
+spring.data.mongodb.uri=mongodb+srv://<username>:<password>@institutobushido.f8pdbuz.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=bushido
