Incluindo atributo responsaveis na classe Aluno e criando os dtos necessarios

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-spring.data.mongodb.uri=mongodb+srv://<username>:<password>@institutobushido.f8pdbuz.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
 spring.data.mongodb.database=bushido
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=password
