--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.data.mongodb.uri=mongodb+srv://benedictotavio:123@institutobushido.f8pdbuz.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=bushido
+spring.data.mongodb.uri=${MONGO_URI:mongodb+srv://benedictotavio:123@institutobushido.f8pdbuz.mongodb.net/?retryWrites=true&w=majority}
+spring.data.mongodb.database=${MONGO_DB:bushido}
+jwt.secret=${JWT_SECRET:my-secret-key}
