--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,5 +19,7 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
+    - name: Set enviroment variables
+      run: echo "MONGO_URI=${{ vars.MONGO_URI }}" >> $GITHUB_ENV
     - name: Build with Maven
       run: mvn package
