--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,6 +11,11 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    env:
+      MONGO_URI: ${{ vars.MONGO_URI }}
+      MONGO_DB: ${{ vars.MONGO_DB }}  
+      JWT_SECRET: ${{ secrets.JWT_SECRET }}
+
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
