fix: correções para a melhora do código

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.data.mongodb.uri=${MONGO_URI:mongodb+srv://benedictotavio:123@institutobushido.f8pdbuz.mongodb.net/?retryWrites=true&w=majority}
+spring.data.mongodb.uri=${MONGO_URI:mongodb+srv://<username>:<password>@institutobushido.f8pdbuz.mongodb.net/?retryWrites=true&w=majority}
 spring.data.mongodb.database=${MONGO_DB:bushido}
 jwt.secret=${JWT_SECRET:my-secret-key}
