--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,30 +1,31 @@
-name: java-maven
+name: Run Java CI with Maven
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     env:
       MONGO_URI: ${{ vars.MONGO_URI }}
-      MONGO_DB: ${{ vars.MONGO_DB }}  
+      MONGO_DB: ${{ vars.MONGO_DB }}
       JWT_SECRET: ${{ secrets.JWT_SECRET }}
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Set enviroment variables
-      run: echo "MONGO_URI=${{ vars.MONGO_URI }}" >> $GITHUB_ENV
-    - name: Build with Maven
-      run: mvn package
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: "17"
+          distribution: "temurin"
+          cache: maven
+      - name: Set enviroment variables
+        run: echo "MONGO_URI=${{ vars.MONGO_URI }}" >> $GITHUB_ENV
+      - name: Build with Maven
+        run: mvn package
+      - name: Run tests
+        run: mvn test
