feature: inserção de sistema de cache na busca de aluno por rg

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.data.mongodb.uri=mongodb+srv://${MONGO_USERNAME}:${MONGO_PASSWORD}@institutobushido.f8pdbuz.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=${MONGO_DB:bushido}
 jwt.secret=${JWT_SECRET:secret}
+
+spring.cache.type=simple
